# mdict

mdict-cli-rs/: Cargo.toml
mdict-cli-rs/src/: main.rs
mdict/src/: parser.rs
src/: parser.rs
