[package]
name = "mdict-cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.76"
dialoguer = "0.11.0"
dirs = "5.0.1"
mdict = { path = "../mdict" }
tempfile = "3.8.1"
walkdir = "2.4.0"
scraper = "0.18.1"
ego-tree = "0.6.2"
